samples/_failures_safe/1761437689_8702d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01df8da8.c: In function ‘main’:
./samples/SAFE/__tmp_01df8da8.c:148:9: error: expected declaration or statement at end of input
  148 |         case OP_TRANSPOSE:
      |         ^~~~
./samples/SAFE/__tmp_01df8da8.c:148:9: error: expected declaration or statement at end of input
